--- a/styles/default.css
+++ b/styles/default.css
@@ -1,3 +1,68 @@
+*{
+    margin:0;
+    padding:0;
+    text-decoration:none;
+}
+
 body {
-    background-color: #ff0000;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
+    padding-top:55px;
+}
+
+.header {
+    background-color: white;
+    width:100%;
+    height:55px;
+    display:flex;  
+    position: fixed;
+    top:0px;
+    align-items:center;
+    justify-content:center;
+}
+.header nav{
+    width:960px;
+    display:flex;
+    align-items:center;
+}
+.header nav ul{
+    list-style-type:none; 
+    text-decoration:none;
+    display:flex;
+    align-items:center;
+    justify-content:space-around;
+    width:100%;
+}
+.menu-logo{
+    background-image:url("../images/logo.png");
+    background-size:100px 40px;
+    width:100px;
+    height:40px;
+    
+}
+.menu-logo a{
+    display:none;
+    
+}
+
+.content {
+    width:960px;
+    margin-top:20px;
+    height:auto;
+    display:flex;
+    background-color:red;
+    justify-content:center;
+    
+}
+.search{
+    width:40%;
+    height:50px;
+    background-color:white;
+    display:flex;
+}
+.track{
+    width:40%;
+    height:50px;
+    background-color:white;
+    display:flex;
 }
