--- a/styles/default.css
+++ b/styles/default.css
@@ -1,68 +1,197 @@
-*{
-    margin:0;
-    padding:0;
-    text-decoration:none;
+* {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 55px;
 }
 
-body {
-    background-image: url("../images/pattern/shattered.png");
-    background-repeat: repeat;
-    padding-top:55px;
+
+/* HEADER */
+
+.header-container {
+    background-color:cyan;
+    width: 100%;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top:0px;
 }
 
 .header {
-    background-color: white;
-    width:100%;
-    height:55px;
-    display:flex;  
-    position: fixed;
-    top:0px;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 960px;
+}
+
+.header-logo {
+    background-image: url("../images/logo.png");
+    background-repeat:no-repeat;
+    background-size: 100px 40px;
+    flex-basis: 20%;
+    height: 40px;
+}
+
+.header-logo h1 {
+    display: none;
+}
+
+.header-navigation {
+    flex-basis:65%;
+}
+
+.header-navigation ul {
+    list-style-type: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.header-social {
+    flex-basis:15%;
+}
+
+.header-social ul {
+    list-style-type: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+/* CONTENT */
+
+.content-container {
+    background-color: magenta;
+    display: flex;
+    justify-content: center;
+    max-width: 960px;
+    height: 1800px;
+}
+
+.content{
+    background-color: green;
+}
+
+.content-toolbar {
+ max-width:960px;
+ height:55px;
+ background-color:yellow;
+ display:flex;
+ justify-content:center;
+ 
+    }
+ /* search i items */
+ .items{
+     min-width:calc(50%-1%);
+     margin-right:2%;
+     background-color:blue;
+     display:flex;
+     
+ }
+ .search{
+     min-width:calc(50%-1%);
+     background-color:black;
+     display:flex;
+ }
+ 
+/* CONTENT main news i sub news */
+
+.content-main{
+    max-width:75%;
+    margin:1%;
+    height:600px;
+    display:flex;
+    justify-content:flex-start;
     align-items:center;
+    flex-direction: column;
+    background-color:white;
+}
+.main-news{
+    display:flex;
+    margin:1%;
+    max-width:90%;
+    height:60%;
+    background-color:black;
+}
+.sub{
+    height:50%;
+    background-color:violet;
+    display:flex;
+    flex-direction:row;
     justify-content:center;
 }
-.header nav{
-    width:960px;
+.sub-news{
     display:flex;
-    align-items:center;
-}
-.header nav ul{
-    list-style-type:none; 
-    text-decoration:none;
-    display:flex;
-    align-items:center;
-    justify-content:space-around;
-    width:100%;
-}
-.menu-logo{
-    background-image:url("../images/logo.png");
-    background-size:100px 40px;
-    width:100px;
-    height:40px;
-    
-}
-.menu-logo a{
-    display:none;
+    margin:1%;
+    max-width:44%;
+    height:80%;
+    background-color:olive;
     
 }
 
-.content {
-    width:960px;
-    margin-top:20px;
-    height:auto;
-    display:flex;
-    background-color:red;
-    justify-content:center;
+/*kalendarcic */
+
+
+
+
+
+/* FOOTER */
+
+.footer-container {
+    background-color: yellow;
+    display: flex;
+    justify-content: center;
+    width:100%;
+}
+
+.footer {
+    background-color: blue;
+    display: flex;
+    justify-content: space-between;
+    max-width: 960px;
+}
+
+.footer-item {
+    flex-basis: calc(33.3333% - 10px);
+    background-color: aqua;
+}
+
+
+/* MOBILE OVERRIDES */
+
+@media (max-width: 500px){
+    .footer {
+        flex-direction: column;
+    }
+    .footer-item {
+        flex-basis: 100%;
+    }
+}
+@media (max-width: 500px){
     
+  .content-toolbar{
+      flex-direction:column;
+      height:auto;
+  }
+  .items{
+      max-width:100%;
+      flex-basis:100%;
+  }
+  search{
+      max-width:100%;
+      flex-basis:100%;
+  }
 }
-.search{
-    width:40%;
-    height:50px;
-    background-color:white;
-    display:flex;
-}
-.track{
-    width:40%;
-    height:50px;
-    background-color:white;
-    display:flex;
-}
+
+
