--- a/styles/default.css
+++ b/styles/default.css
@@ -8,13 +8,16 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 55px;
+    font-family: 'Raleway', sans-serif;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
 }
 
 
 /* HEADER */
 
 .header-container {
-    background-color:cyan;
+    background-color:white;
     width: 100%;
     height: 55px;
     display: flex;
@@ -24,7 +27,7 @@ body {
 }
 
 .header {
-    background-color: red;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -45,6 +48,7 @@ body {
 
 .header-navigation {
     flex-basis:65%;
+    
 }
 
 .header-navigation ul {
@@ -81,13 +85,15 @@ body {
 
 .content{
     flex-direction: row;
-    background-color: green;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
 }
 
 .content-toolbar {
  max-width:960px;
  height:55px;
- background-color:yellow;
+ background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
  display:flex;
  justify-content:center;
  
@@ -96,16 +102,49 @@ body {
  .items{
      min-width:calc(50%-1%);
      margin-right:2%;
-     background-color:blue;
+     margin-top:2%;
+     background-color:white;
+     flex-direction: row;
      display:flex;
+     justify-content:center;
+     align-items:center;
      
  }
+ .items h1{
+     margin-left:5%;
+     font-size:20px;
+     display:flex;
+ }
  .search{
+     margin-top:2%;
      min-width:calc(50%-1%);
      background-color:black;
      display:flex;
  }
+ /* searchbar */
  
+.Field {
+  display: flex;
+}
+
+.SearchBox-query {
+font-family: 'Raleway', sans-serif;
+  flex: 1 0 9em;
+  font-size:18px;
+}
+
+.SearchBox-submitBtn {
+  width:20%;
+  font-family: 'Raleway', sans-serif;
+  font-size:18px;
+}
+
+.Field--is-search:before {
+    font-family: 'Raleway', sans-serif;
+  flex: 0 0 0.2em;
+
+}
+
 /* CONTENT main news i sub news */
 
 .content-main{
@@ -117,12 +156,14 @@ body {
     justify-content:flex-start;
     align-items:center;
     flex-direction: column;
-    background-color:white;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
 }
 .main{
     flex-wrap: wrap;
-    height:50%;
-    background-color:violet;
+    height:auto;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
     display:flex;
     flex-direction:row;
     justify-content:center;
@@ -131,14 +172,32 @@ body {
     display:flex;
     margin:1%;
     min-width:200px;
-    max-width:98%px;
-    height:400px;
-    background-color:black;
+    max-width:930px;
+    height:auto;
+    flex-direction:column;
+    background-color:white;
 }
+.main-news img{
+    display:flex;
+    width:100%;
+    height:20%;
+}
+.main-news h1{
+    margin:2%;
+    display:flex;
+   }
+   .main-news p{
+       font-size:18px;
+       margin-left:2%;
+       margin-bottom:2%;
+       display:flex;
+   }
+
 .sub{
     flex-wrap: wrap;
-    height:50%;
-    background-color:violet;
+    height:auto;
+    background-image: url("../images/pattern/shattered.png");
+    background-repeat: repeat;
     display:flex;
     flex-direction:row;
     justify-content:center;
@@ -146,13 +205,28 @@ body {
 .sub-news{
     display:flex;
     margin:1%;
-    min-width:330px;
+    min-width:300px;
     max-width:45%;
-    height:240px;
-    background-color:olive;
+    height:auto;
+    flex-direction:column;
+    background-color:white;
     
 }
-
+.sub-news img{
+    display:flex;
+    width:100%;
+    height:20%;
+}
+.sub-news h1{
+    margin:2%;
+    display:flex;
+   }
+   .sub-news p{
+       font-size:18px;
+       margin-left:2%;
+       margin-bottom:2%;
+       display:flex;
+   }
 /*kalendarcic */
 .main-calendar{
     min-width:15%;
@@ -168,7 +242,7 @@ body {
 .calendar-content-main{
     min-width:200px;
     max-width:30%;
-    height:200px;
+    height:auto;
     display:flex;
     margin:5pt;
     background-color:black;
@@ -179,7 +253,7 @@ body {
 /* FOOTER */
 
 .footer-container {
-    background-color: yellow;
+    background-color: black;
     display: flex;
     justify-content: center;
     width:100%;
