--- a/styles/default.css
+++ b/styles/default.css
@@ -19,7 +19,7 @@ body {
 .header-container {
     background-color:white;
     width: 100%;
-    height: 55px;
+    padding:5px 0px;
     display: flex;
     justify-content: center;
     position: fixed;
@@ -32,6 +32,10 @@ body {
     align-items: center;
     justify-content: space-between;
     max-width: 960px;
+}
+
+.header-toggle {
+    display:none;
 }
 
 .header-logo {
@@ -281,21 +285,70 @@ font-family: 'Raleway', sans-serif;
     .footer-item {
         flex-basis: 100%;
     }
-}
-@media (max-width: 500px){
+    .content-toolbar{
+        flex-direction:column;
+        height:auto;
+    }
+    .items{
+        max-width:100%;
+        flex-basis:100%;
+    }
+    search{
+        max-width:100%;
+        flex-basis:100%;
+    }
     
-  .content-toolbar{
-      flex-direction:column;
-      height:auto;
-  }
-  .items{
-      max-width:100%;
-      flex-basis:100%;
-  }
-  search{
-      max-width:100%;
-      flex-basis:100%;
-  }
+    /* DEACTIVATED */
+     .header {
+        flex-direction:column;
+    }
+
+    .header .header-toggle {
+        display:flex;
+        align-self:flex-end;
+        background-color:red;
+        width:32px;
+        height:32px;
+    }
+
+    .header .header-logo {
+        display:none;
+    }
+
+    .header .header-navigation ul {
+        display:none;
+    }
+
+    .header .header-social ul {
+        display:none;
+    }
+    
+    /* ACTIVATED */
+    .header.active {
+        flex-direction:column;
+    }
+
+    .header.active .header-toggle {
+        display:flex;
+        align-self:flex-end;
+        background-color:red;
+        width:32px;
+        height:32px;
+    }
+
+    .header.active .header-logo {
+        display:none;
+    }
+
+    .header.active .header-navigation ul {
+        display:flex;
+        flex-direction: column;
+    }
+
+    .header.active .header-social ul {
+        display:none;
+    }
+    
 }
 
 
